out/old/manifests/argocd/NetworkPolicy.argocd-application-controller-network-policy.yaml
metadata:
  name: argocd-application-controller-network-policy
  namespace: argocd
  labels:
    app.kubernetes.io/instance: argocd
  annotations: {}
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: argocd-application-controller
  ingress:
  - ports:
    - protocol: TCP
      port: 8082
    from:
    - namespaceSelector: {}
  policyTypes:
  - Ingress
apiVersion: <DOMAIN_775>/v1
kind: NetworkPolicy
